--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages and this is a test.</p>
-</body>
+<p>Testing Equations</p>
+
+<iframe src="http://mathurl.com/render.cgi?%5Czeta%28s%29%20%3D%20%5Csum_%7Bn%3D1%7D%5E%5Cinfty%20%5Cfrac%7B1%7D%7Bn%5Es%7D%5Cprod_%7Bt%7D%5E%7Bt%7D%5Cnocache" title="test"></iframe>
+
+
 </html>
