--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages and this is a test.</p>
 <p>Testing Equations</p>
-
-<iframe src="http://mathurl.com/render.cgi?%5Czeta%28s%29%20%3D%20%5Csum_%7Bn%3D1%7D%5E%5Cinfty%20%5Cfrac%7B1%7D%7Bn%5Es%7D%5Cprod_%7Bt%7D%5E%7Bt%7D%5Cnocache" title="test" width="100%" height="300" style="border:none;"></iframe>
-
+<h1>An Equation Of Awesome </h1>
+<p><img src="render.png" alt="test"></p>
 
 </html>
