--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@ div {text-align: center;}
 <p>Testing Equations</p>
 <h1>An Equation Of Awesome </h1>
 <p><img src="render.png" alt="test"></p>
-
+<a href="test.html">test page</a>
 </html>
