--- a/test.html
+++ b/test.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
-</style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Test Page</h1>
-<a href="index.html">home page</a>
 
-<div style="background-color: red; width: 50px; height: 50px;" onclick="xSignDisplayLetter()" id="one"></div>
-<br />
-<div style="background-color: red; width: 50px; height: 50px;" onclick="xSignDisplayLetterVerTwo()" id="two"></div>
-<br />
-<div style="background-color: red; width: 50px; height: 50px;" onclick="revealImg()" id="image"></div>
-<script>
-function revealImg() {
-    document.getElementById("image").innerHTML = "<img src='https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png' alt='Image' style='width: 50px; height: 50px;' />"
-}
-function xSignDisplayLetter() {
-    document.getElementById("one").innerHTML = "<img src='https://image.freepik.com/free-icon/x-symbol_318-1407.jpg' alt='Image' style='width: 50px; height: 50px;' />"
-}
-function xSignDisplayLetterVerTwo() {
-    document.getElementById("two").innerHTML = "<img src='https://d3qdvvkm3r2z1i.cloudfront.net/media/catalog/product/cache/1/image/1800x/6b9ffbf72458f4fd2d3cb995d92e8889/n/o/nope_newthumb.png' alt='Image' style='width: 50px; height: 50px;' />"
-    }
-</script>
+  <button title="Click to Show/Hide Content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">Show/Hide</button>
+  <div id="spoiler" style="display:none">
+  ADD YOUR HIDDEN CONTENT HERE
+  </div>
+
+  <button title="Click to Show/Hide Content" type="button" onclick="if(document.getElementById('eq2') .style.display=='none') {document.getElementById('eq2') .style.display=''}else{document.getElementById('eq2') .style.display='none'}">Show/Hide Eq2</button>
+  <div id="eq2" style="display:none">
+  Eq 2
+  </div>
+
+
 
 </body>
 </html>
